--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,19 @@
 {
   "files": [],
   "references": [
-    { "path": "./tsconfig.app.json" },
-    { "path": "./tsconfig.node.json" }
+    {
+      "path": "./tsconfig.app.json"
+    },
+    {
+      "path": "./tsconfig.node.json"
+    }
   ],
   "compilerOptions": {
-    "types": ["vite-plugin-svgr/client"]
+    "types": [
+      "node",
+      "jest",
+      "@testing-library/jest-dom",
+      "vite-plugin-svgr/client"
+    ]
   }
 }
